Nuevo psuh actualizacion por las inscripciones